# SIServer

./: CMakeLists.txt
src/: connection.cpp  connection.h  connectionclient.cpp  connectionclient.h  connectionremoteemulator.cpp  connectionremoteemulator.h  main.cpp  protocol.h  server.cpp  server.h
